fix: dark mode and delete spaces

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,7 +42,7 @@
 
 .dark-mode {
   min-height: 100vh; /* So the background covers the full screen */
-  min-width: 100vw; /* So the background covers the full screen */
+  min-width: 100%; 
 
   background-color: #121212;
   color: #ffffff;
